Bugfix: Rendered mobiledoc atoms should have a bit of right padding (as they are eating the whitespace otherwise)

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -64,6 +64,10 @@ h3.editor-section-title {
   color: purple;
 }
 
+.__rendered-mobiledoc-atom {
+  margin-right: 5px;
+}
+
 .-mobiledoc-kit__atom div {
   display: inline-block;
 }
